updated projects. minor responsiveness updates. minor css updates.

--- a/projects.html
+++ b/projects.html
@@ -49,25 +49,9 @@
             <div class="projects content-subpage">
                 <div class="projects-content-container text-center">
                     <div class="row">
-                        <div class="col-md-3 project-background">
+                        <div class="col-md-4 project-background">
                           <div class="card text-center">
-                              <img class="card-img-top project-images" src="media/project-images/1.svg" alt="Mock up of World Destination Clock">
-                              <div class="card-body">
-                                  <h5 class="card-title">World Destination Clock</h5>
-                                  <p class="card-text">
-                                    This world-clock application displays the local time and date of select cities around the world, including your current location. 
-                                  </p>
-                                  <p>
-                                      HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
-                                  </p>
-                                  <a href="https://github.com/dsen12/World-clock.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                                  <a href="https://worldclock-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
-                              </div>
-                          </div>
-                        </div>
-                        <div class="col-md-3 project-background">
-                          <div class="card text-center">
-                              <img class="card-img-top project-images" src="media/project-images/2.svg" alt="mock up of Vanilla JS Weather App">
+                              <img class="card-img-top project-images" src="media/project-images/13.svg" alt="mock up of Vanilla JS Weather App">
                               <div class="card-body">
                                   <h5 class="card-title">Vanilla JS Weather App</h5>
                                   <p class="card-text">
@@ -81,9 +65,9 @@
                       </div>
                           </div>
                         </div>
-                        <div class="col-md-3 project-background">
+                        <div class="col-md-4 project-background">
                           <div class="card text-center">
-                              <img class="card-img-top project-images" src="media/project-images/3.svg" alt="Mock up of Dilhani Seneviratne's portfolio">
+                              <img class="card-img-top project-images" src="media/project-images/15.svg" alt="Mock up of Dilhani Seneviratne's portfolio">
                               <div class="card-body">
                                   <h5 class="card-title">Portfolio</h5>
                                   <p class="card-text">
@@ -98,6 +82,38 @@
                               </div>
                           </div>
                         </div>
+                        <div class="col-md-4 mt- project-background">
+                            <div class="card text-center">
+                                <img class="card-img-top project-images" src="media/project-images/14.svg" alt="Mock up of React dictionary site">
+                                <div class="card-body">
+                                    <h5 class="card-title">React Dictionary</h5>
+                                    <p class="card-text">
+                                        A dictionary search engine to check the definitions of any English word. Also included are synonyms, examples, pronunciations & images where applicable.
+                                    </p>
+                                    <p>
+                                        HTML ・ CSS ・ JAVASCRIPT ・ REACT ・ API ・ BOOTSTRAP
+                                    </p>
+                                    <a href="https://github.com/dsen12/react-dictionary-app" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                    <a href="https://react-dictionary-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view site</i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mt- project-background">
+                            <div class="card text-center">
+                                <img class="card-img-top project-images" src="media/project-images/16.svg" alt="Mock up of React Weather app">
+                                <div class="card-body">
+                                    <h5 class="card-title">React Weather App</h5>
+                                    <p class="card-text">
+                                        This weather application allows you to check the current weather & 6-day forecast of over 200,000 cities in the world, including your current location.
+                                    </p>
+                                    <p>
+                                        HTML ・ CSS ・ JAVASCRIPT ・ REACT ・ API ・ BOOTSTRAP
+                                    </p>
+                                    <a href="https://github.com/dsen12/react-weather-app" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                    <a href="https://react-weather-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                                </div>
+                            </div>
+                          </div>
                     </div>
                 </div>
             </div>
