--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                         <div class="row">
                             <div class="col-lg-7">
                                 <p>
-                                    I first had a glimpse of web development in 2011. The typical story of a teenager equipped with nothing but sheer determination & Google, customising Tumblr themes for aesthetic purposes. These themes are now long gone, but my interest in coding was forever piqued.
+                                    I first had a glimpse of web development in 2011. The story of a teenager equipped with nothing but sheer determination & Google, customising Tumblr themes for aesthetic purposes. These themes are now long gone, but my interest in coding was forever piqued.
                                     <br>
                                     <br>
                                     Fast forward to more than a decade later, I decided to revisit and combine the skills and interests that I already have. I have a knack for problem-solving, I like building things, I like design, I like technology. At the epicentre of all these things was coding. 
