minor alignment issue for contact page

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                                     I first had a glimpse of web development in 2011. The story of a teenager equipped with nothing but sheer determination & Google, customising Tumblr themes for aesthetic purposes. These themes are now long gone, but my interest in coding was forever piqued.
                                     <br>
                                     <br>
-                                    Fast forward to more than a decade later, I decided to revisit and combine the skills and interests that I already have. I have a knack for problem-solving, I like building things, I like design, I like technology. At the epicentre of all these things was coding. 
+                                    Fast forward more than a decade later, I decided to revisit and combine the skills and interests that I already have. I have a knack for problem-solving, I like building things, I like design, I like technology. At the epicentre of all these things was coding. 
                                     <br>
                                     <br>
                                     In October 2022, I immersed myself in the SheCodes workshops and have been learning and building applications/projects with the fundamentals and React ever since.
