added SC front-end dev. certificate and reordered all certs.

--- a/about.html
+++ b/about.html
@@ -96,29 +96,24 @@
                     <h2>Certificates</h2>
                     <div class="certificates-content">
                         <div class="row">
-                            <div class="col-md">
-                                <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
-                                    <img src="media/certificates/PlusAO.png" alt="" class="certificates img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-md">
-                                <a href="https://www.shecodes.io/certificates/b48e7a515c5b927e56c9e508aec67c50" target="_blank">
-                                    <img src="media/certificates/ResponsiveAO.png" alt="" class="certificates img-fluid">
+                            <div class="col-md" >
+                                <a href="https://www.shecodes.io/certificates/b1babd31e217fadfcf1ac8ff8854e77f" target="_blank">
+                                    <img src="media/certificates/FED.png" alt="SheCodes Max Front-End Developer Certificate" class="certificates img-fluid">
                                 </a>
                             </div>
                             <div class="col-md">
                                 <a href="https://www.shecodes.io/certificates/5bdad4f4f8ab4149e20f70b6c99dcfa3" target="_blank">
-                                    <img src="media/certificates/ReactAO.png" alt="" class="certificates img-fluid">
+                                    <img src="media/certificates/ReactAO.png" alt="SheCodes React Add-on Certificate" class="certificates img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md" >
-                                <a href="" target="_blank">
-                                    <img src="media/certificates/SC Plus AO.png" alt="" class="certificates img-fluid">
+                            <div class="col-md">
+                                <a href="https://www.shecodes.io/certificates/b48e7a515c5b927e56c9e508aec67c50" target="_blank">
+                                    <img src="media/certificates/ResponsiveAO.png" alt="SheCodes Responsive Add-on Certificate" class="certificates img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md mb-5" >
-                                <a href="" target="_blank">
-                                    <img src="media/certificates/SC Responsive.png" alt="" class="certificates img-fluid">
+                            <div class="col-md">
+                                <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
+                                    <img src="media/certificates/PlusAO.png" alt="SheCodes Plus Add-on Certificate" class="certificates img-fluid">
                                 </a>
                             </div>
                         </div>
