--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="headers">
                         <p>Hi there! My name is</p>
                         <h1>Dilhani Seneviratne.</h1>
-                        <h2 class="mb-5">I'm a Front-End Developer, based in Australia</h2>
+                        <h2 class="mb-5">I'm a Front-End (React) Developer, based in Australia</h2>
                     </div>
                     <div class="scroll-down-button">
                         <a href="index.html#content-container" class="btn hero-btn-branding">
@@ -59,7 +59,7 @@
                     <p class="mb-5">Thank you for visiting my online portfolio. 
                         <br>
                         <br>
-                        My name is <strong>Dilhani</strong> and I am currently based in Adelaide, Australia. I am a budding web developer with a focus on Frontend Development.
+                        My name is <strong>Dilhani</strong> and I am currently based in Adelaide, Australia. I am a budding Front-End Developer with a focus on React.js.
                         <br>
                         <br>
                         I officially started my coding journey in 2022 by joining the SheCodes community. Since then I have been working on projects/designs to further improve my coding skills.
