--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="headers">
                         <p>Hi there! My name is</p>
                         <h1>Dilhani Seneviratne.</h1>
-                        <h2 class="mb-5">I'm a Front-End (React) Developer, based in Australia</h2>
+                        <h2 class="mb-5">I'm a Front-End Developer, based in Australia</h2>
                     </div>
                     <div class="scroll-down-button">
                         <a href="index.html#content-container" class="btn hero-btn-branding">
